--- a/public/css/forms.css
+++ b/public/css/forms.css
@@ -1,38 +1,58 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 body {
-    background-color: rgb(104, 126, 170);
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  background-color: #d4d4d4;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 form {
-    width: 500px;
-    padding: 15px;
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
+  width: 500px;
+  padding: 15px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  box-shadow: 0px 25px 25px #b8b8b8;
+  border-top: 1px solid #e5e5e5;
 }
 
 input {
-    padding: 5px;
+  padding: 10px;
+  border: 1px solid rgb(111, 111, 111);
+}
+
+input:focus {
+  outline: none;
+  background-color: rgb(240, 240, 240);
 }
 
 div {
-    display: flex;
-    justify-content: space-around;
+  display: flex;
+  justify-content: space-around;
 }
 
 h2 {
-    text-align: center;
-    color: white;
+  text-align: center;
+  color: #6366f1;
+  user-select: none;
+  text-shadow: 1px 1px 1px #b0b1ff;
+  font-weight: bold;
+  font-size: 30px;
 }
 
 button {
-    background-color: yellowgreen;
-    padding: 5px;
+  background-color: #6366f1;
+  color: white;
+  padding: 10px;
+  border: 1px solid #3d3e92;
 }
 
 a {
-    color: white;
+  color: white;
 }
