--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,7 +25,7 @@
           <div style="padding: 5px; border: solid 1px rgb(131, 131, 131)">
             <a style="color: blue" href="/article/<%=f.id %>" /><%= f.title %></a>
           </div>
-          <div style="padding: 5px"><%= f.description %></div>
+          <div style="padding: 5px; text-wrap: balance; overflow: hidden;"><%= f.description %></div>
 
           <div>
             <button onclick="upVote('<%=f.id%>')" style="color: #22c55e">
@@ -37,7 +37,7 @@
               <div><%= f.downvotes.length %></div>
             </button>
           </div>
-          <div style="padding: 5px;"><%= f.tags %></div>
+          <div style="padding: 5px;"><b>Tags:</b> <%= f.tags %></div>
         </article>
         <% }) %>
       </div>
